--- a/Analysis/DataAnalysis.ipynb
+++ b/Analysis/DataAnalysis.ipynb
@@ -76,7 +76,6 @@
     "if lista_de_bancos_do_csv:\n",
     "    # Passo 2: Definir os indicadores\n",
     "    indicadores_desejados = {\n",
-    "        'Índice de Basileia': {'tipo': 'IFDATA', 'conta': 'Índice de Basileia'},\n",
     "        'TCB': {'tipo': 'Atributo', 'atributo': 'TCB_IFD_CAD'},\n",
     "        'Volume de Operações tipo A': {'tipo': 'IFDATA', 'conta': 'A'},\n",
     "        'Volume de Operações tipo AA': {'tipo': 'IFDATA', 'conta': 'AA'},\n",
@@ -91,9 +90,7 @@
     "        'Depósitos a Prazo': {'tipo': 'IFDATA', 'conta': 'Depósitos a Prazo (a4)'},\n",
     "        'Letra de Crédito Imobiliário': {'tipo': 'IFDATA', 'conta': 'Letras de Crédito Imobiliário (c1)'},\n",
     "        'Letra de Crédito Agronegócio': {'tipo': 'IFDATA', 'conta': 'Letras de Crédito do Agronegócio (c2)'},\n",
-    "        'Letras Financeiras': {'tipo': 'IFDATA', 'conta': 'Letras Financeiras (c3)'},\n",
-    "        'RWA': {'tipo': 'IFDATA', 'conta': 'Patrimônio de Referência para Comparação com o RWA'},\n",
-    "        'Ativo Total': {'tipo': 'IFDATA', 'conta': 'Ativo Total'}\n",
+    "        'Letras Financeiras': {'tipo': 'IFDATA', 'conta': 'Letras Financeiras (c3)'}\n",
     "        }\n",
     "\n",
     "    # Passo 3: Chamar a função 'comparar_indicadores'\n",
@@ -123,6 +120,152 @@
     "        print(f\"\\nRelatório salvo com sucesso em: '{caminho_output_tabela.resolve()}'\")\n",
     "    except Exception as e:\n",
     "        print(f\"\\nErro ao salvar o relatório em Excel: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33306edc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ==============================================================================\n",
+    "# CÉLULA 1: GERAR RELATÓRIO DE SÉRIES TEMPORAIS (FORMATO LONG)\n",
+    "# ==============================================================================\n",
+    "\n",
+    "# --- 1. Configuração Inicial ---\n",
+    "results_dir = Path('.') / 'Results'\n",
+    "results_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "print(\"--- Lendo a lista de bancos do arquivo Banks.csv ---\")\n",
+    "try:\n",
+    "    caminho_csv = Path('.') / 'Banks.csv'\n",
+    "    df_bancos_interesse = pd.read_csv(caminho_csv, dtype={'CNPJ': str}, sep=';')\n",
+    "    lista_de_bancos = [du.standardize_cnpj_base8(cnpj) for cnpj in df_bancos_interesse['CNPJ'].tolist()]\n",
+    "    lista_de_bancos = [b for b in lista_de_bancos if b]\n",
+    "    print(f\"Encontrados {len(lista_de_bancos)} bancos para análise.\")\n",
+    "except FileNotFoundError:\n",
+    "    print(\"ERRO: O arquivo 'Banks.csv' não foi encontrado.\")\n",
+    "    lista_de_bancos = []\n",
+    "\n",
+    "contas_de_interesse = [\n",
+    "    'Lucro Líquido',\n",
+    "    'Ativo Total',\n",
+    "    'Patrimônio Líquido',\n",
+    "    'Patrimônio de Referência para Comparação com o RWA',\n",
+    "    'Índice de Basileia'\n",
+    "]\n",
+    "\n",
+    "# --- 2. Coleta de Dados ---\n",
+    "print(\"\\n--- Coletando dados para construir a base em formato LONG ---\")\n",
+    "lista_dfs_long = []\n",
+    "if lista_de_bancos:\n",
+    "    for banco in lista_de_bancos:\n",
+    "        for conta in contas_de_interesse:\n",
+    "            try:\n",
+    "                df_serie = analisador.get_serie_temporal_indicador(\n",
+    "                    identificador=banco,\n",
+    "                    conta=conta,\n",
+    "                    data_inicio=202201,\n",
+    "                    data_fim=202412,\n",
+    "                    fonte='IFDATA'\n",
+    "                )\n",
+    "                if not df_serie.empty:\n",
+    "                    df_serie = df_serie[df_serie['DATA'].dt.month.isin([3, 6, 9, 12])]\n",
+    "                    lista_dfs_long.append(df_serie)\n",
+    "            except Exception as e:\n",
+    "                print(f\"Erro ao processar banco {banco}, conta {conta}: {e}\")\n",
+    "\n",
+    "# --- 3. Consolidação e Salvamento ---\n",
+    "if lista_dfs_long:\n",
+    "    df_long_final = pd.concat(lista_dfs_long, ignore_index=True)\n",
+    "    print(\"\\nBase de dados em formato LONG criada com sucesso.\")\n",
+    "    \n",
+    "    caminho_saida = results_dir / 'series_temporais_formato_long.xlsx'\n",
+    "    df_long_final.to_excel(caminho_saida, index=False)\n",
+    "    \n",
+    "    print(f\"Relatório salvo com sucesso em: {caminho_saida.resolve()}\")\n",
+    "else:\n",
+    "    print(\"\\nNenhum dado foi encontrado para gerar o relatório.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2986abc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ==============================================================================\n",
+    "# CÉLULA 2: GERAR RELATÓRIO DE SÉRIES TEMPORAIS (FORMATO PIVOTADO)\n",
+    "# ==============================================================================\n",
+    "\n",
+    "# --- 1. Configuração Inicial ---\n",
+    "results_dir = Path('.') / 'Results'\n",
+    "results_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "print(\"--- Lendo a lista de bancos do arquivo Banks.csv ---\")\n",
+    "try:\n",
+    "    caminho_csv = Path('.') / 'Banks.csv'\n",
+    "    df_bancos_interesse = pd.read_csv(caminho_csv, dtype={'CNPJ': str}, sep=';')\n",
+    "    lista_de_bancos = [du.standardize_cnpj_base8(cnpj) for cnpj in df_bancos_interesse['CNPJ'].tolist()]\n",
+    "    lista_de_bancos = [b for b in lista_de_bancos if b]\n",
+    "    print(f\"Encontrados {len(lista_de_bancos)} bancos para análise.\")\n",
+    "except FileNotFoundError:\n",
+    "    print(\"ERRO: O arquivo 'Banks.csv' não foi encontrado.\")\n",
+    "    lista_de_bancos = []\n",
+    "\n",
+    "contas_de_interesse = [\n",
+    "    'Lucro Líquido',\n",
+    "    'Ativo Total',\n",
+    "    'Patrimônio Líquido',\n",
+    "    'Patrimônio de Referência para Comparação com o RWA',\n",
+    "    'Índice de Basileia'\n",
+    "]\n",
+    "\n",
+    "# --- 2. Coleta de Dados ---\n",
+    "print(\"\\n--- Coletando dados para a base ---\")\n",
+    "lista_dfs_long = []\n",
+    "if lista_de_bancos:\n",
+    "    for banco in lista_de_bancos:\n",
+    "        for conta in contas_de_interesse:\n",
+    "            try:\n",
+    "                df_serie = analisador.get_serie_temporal_indicador(\n",
+    "                    identificador=banco,\n",
+    "                    conta=conta,\n",
+    "                    data_inicio=202201,\n",
+    "                    data_fim=202412,\n",
+    "                    fonte='IFDATA'\n",
+    "                )\n",
+    "                if not df_serie.empty:\n",
+    "                    df_serie = df_serie[df_serie['DATA'].dt.month.isin([3, 6, 9, 12])]\n",
+    "                    lista_dfs_long.append(df_serie)\n",
+    "            except Exception as e:\n",
+    "                print(f\"Erro ao processar banco {banco}, conta {conta}: {e}\")\n",
+    "\n",
+    "# --- 3. Transformação e Salvamento ---\n",
+    "if lista_dfs_long:\n",
+    "    df_long_base = pd.concat(lista_dfs_long, ignore_index=True)\n",
+    "    print(\"\\nBase de dados coletada. Transformando para o formato PIVOTADO...\")\n",
+    "    \n",
+    "    try:\n",
+    "        df_pivoted_final = df_long_base.pivot_table(\n",
+    "            index=['DATA', 'Nome_Entidade', 'CNPJ_8'],\n",
+    "            columns='Conta',\n",
+    "            values='Valor'\n",
+    "        ).reset_index()\n",
+    "        df_pivoted_final.rename_axis(columns=None, inplace=True)\n",
+    "        print(\"Formato PIVOTADO criado com sucesso.\")\n",
+    "        \n",
+    "        caminho_saida = results_dir / 'series_temporais_formato_pivotado.xlsx'\n",
+    "        df_pivoted_final.to_excel(caminho_saida, index=False)\n",
+    "        \n",
+    "        print(f\"Relatório salvo com sucesso em: {caminho_saida.resolve()}\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Erro ao pivotar os dados: {e}\")\n",
+    "else:\n",
+    "    print(\"\\nNenhum dado foi encontrado para gerar o relatório.\")"
    ]
   }
  ],
