Added New Parameters

--- a/Analysis/DataAnalysis_example.ipynb
+++ b/Analysis/DataAnalysis_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d612057",
+   "id": "1746ea7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "from pathlib import Path\n",
     "import sys\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.ticker as mticker\n",
     "\n",
     "# Adiciona o diretório 'Code' ao path para encontrar o DataUtils\n",
     "code_dir = Path('..').resolve() / 'Code'\n",
@@ -43,47 +44,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68227ff1",
+   "id": "4876115e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ==============================================================================\n",
-    "# SEÇÃO 1: DEMONSTRAÇÕES DE CONSULTAS BÁSICAS\n",
+    "# SEÇÃO 1: CONSULTAS FUNDAMENTAIS\n",
     "# ==============================================================================\n",
-    "# Esta seção mostra como usar os métodos fundamentais para extrair dados\n",
-    "# de cada uma das fontes principais.\n",
+    "# Demonstração dos métodos básicos para extrair dados de cada fonte.\n",
     "# ------------------------------------------------------------------------------\n",
     "\n",
-    "# --- 1.1: Buscando dados contábeis da fonte COSIF ---\n",
-    "print(\"\\n--- 1.1: Consulta básica de dados COSIF ---\")\n",
+    "# --- 1.1: Buscando dados COSIF (por documento específico) ---\n",
+    "print(\"\\n--- 1.1: Consulta de dados COSIF (Prudencial) ---\")\n",
+    "# A função determina o tipo (prudencial) automaticamente pelo documento 4060.\n",
     "dados_cosif = analisador.get_dados_cosif(\n",
-    "    identificador='BCO DO BRASIL S.A.',\n",
-    "    contas=['ATIVO REALIZÁVEL', 'Caixa'],\n",
+    "    identificador='00000000', # CNPJ do Banco do Brasil\n",
+    "    contas=['ATIVO TOTAL', 'PATRIMONIO LIQUIDO'],\n",
     "    datas=202403,\n",
-    "    documentos=4060 # Filtra pelo balancete prudencial\n",
+    "    documentos=4060\n",
     ")\n",
-    "print(\"Resultado para 'BCO DO BRASIL S.A.' (COSIF):\")\n",
+    "print(\"Resultado para 'BANCO DO BRASIL S.A.' (COSIF Prudencial):\")\n",
     "display(dados_cosif)\n",
     "print(\"-\" * 80)\n",
     "\n",
     "\n",
-    "# --- 1.2: Buscando indicadores regulatórios da fonte IF.DATA ---\n",
-    "print(\"\\n--- 1.2: Consulta básica de dados IF.DATA ---\")\n",
+    "# --- 1.2: Buscando dados IF.DATA (com controle de escopo) ---\n",
+    "print(\"\\n--- 1.2: Consulta de dados IF.DATA (Escopo Individual) ---\")\n",
+    "# O novo parâmetro `escopo` permite especificar exatamente qual dado buscar.\n",
     "dados_ifdata = analisador.get_dados_ifdata(\n",
-    "    identificador='28195667', # CNPJ do Banco ABC Brasil\n",
-    "    contas=[78282, 78283, 78284], # Códigos para Depósitos à Vista, Poupança, etc.\n",
-    "    datas=202403\n",
+    "    identificador='60701190', # CNPJ do Itaú Unibanco\n",
+    "    contas=['Índice de Basileia', 'Lucro Líquido'],\n",
+    "    datas=202403,\n",
+    "    escopo='individual' # Buscando o dado da instituição, não do conglomerado.\n",
     ")\n",
-    "print(\"Resultado para 'BANCO ABC BRASIL S.A.' (IF.DATA):\")\n",
+    "print(\"Resultado para 'ITAÚ UNIBANCO S.A.' (IF.DATA Individual):\")\n",
     "display(dados_ifdata)\n",
     "print(\"-\" * 80)\n",
     "\n",
     "\n",
-    "# --- 1.3: Buscando atributos do cadastro das instituições ---\n",
-    "print(\"\\n--- 1.3: Consulta de atributos do cadastro ---\")\n",
+    "# --- 1.3: Buscando atributos do cadastro ---\n",
+    "print(\"\\n--- 1.3: Consulta de atributos de cadastro de Múltiplos Bancos ---\")\n",
     "atributos_cadastro = analisador.get_atributos_cadastro(\n",
-    "    identificador=['ITAU', 'BRADESCO', 'NUBANK'],\n",
-    "    atributos=['TCB_IFD_CAD', 'SITUACAO_IFD_CAD', 'SR_IFD_CAD']\n",
+    "    identificador=['60701190', '00360305', '30306294'], # Itaú, Caixa, BTG\n",
+    "    atributos=['TCB_IFD_CAD', 'SEGMENTOTB_IFD_CAD', 'DATA_INICIO_ATIVIDADE_IFD_CAD']\n",
     ")\n",
     "print(\"Resultado para atributos de cadastro:\")\n",
     "display(atributos_cadastro)\n",
@@ -93,57 +96,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feda8e50",
+   "id": "104e9dcf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ==============================================================================\n",
-    "# SEÇÃO 2: DEMONSTRAÇÕES DE ANÁLISE AGREGADA\n",
+    "# SEÇÃO 2: ANÁLISE E VISUALIZAÇÃO\n",
     "# ==============================================================================\n",
-    "# Esta seção mostra os métodos de alto nível para comparar instituições\n",
-    "# e analisar a evolução de indicadores ao longo do tempo.\n",
+    "# Demonstração dos métodos de alto nível para análises comparativas e temporais.\n",
     "# ------------------------------------------------------------------------------\n",
     "\n",
-    "# --- 2.1: Criando uma tabela comparativa de indicadores ---\n",
+    "# --- 2.1: Tabela Comparativa de Pares ---\n",
     "print(\"\\n--- 2.1: Tabela comparativa de indicadores (Pares) ---\")\n",
+    "# Combinando fontes e escopos diferentes em uma única chamada.\n",
     "indicadores = {\n",
-    "    'Patrimônio Líquido': {'tipo': 'COSIF', 'conta': 'PATRIMÔNIO LÍQUIDO'},\n",
-    "    'Total Ativos': {'tipo': 'COSIF', 'conta': 'TOTAL GERAL DO ATIVO'},\n",
-    "    'Índice de Basileia': {'tipo': 'IFDATA', 'conta': 'Índice de Basileia'},\n",
-    "    'Situação': {'tipo': 'Atributo', 'atributo': 'SITUACAO_IFD_CAD'}\n",
+    "    'Patrimônio Líquido': {'tipo': 'COSIF', 'conta': 'PATRIMONIO LIQUIDO', 'documento_cosif': 4010},\n",
+    "    'Ativo Total': {'tipo': 'IFDATA', 'conta': 'Ativo Total', 'escopo_ifdata': 'prudencial'},\n",
+    "    'Índice de Basileia': {'tipo': 'IFDATA', 'conta': 'Índice de Basileia', 'escopo_ifdata': 'prudencial'},\n",
+    "    'Segmento': {'tipo': 'ATRIBUTO', 'atributo': 'SEGMENTOTB_IFD_CAD'}\n",
     "}\n",
-    "bancos = ['61190658', 'BANCO BRADESCO', 'NU FINANCEIRA', 'BANCO BTG PACTUAL', 'BCO DO BRASIL S.A.']\n",
+    "bancos = ['BANCO DO BRASIL S.A.', 'BANCO BRADESCO S.A.', '60701190', 'BTG Pactual']\n",
     "\n",
     "tabela_comparativa = analisador.comparar_indicadores(\n",
     "    identificadores=bancos,\n",
     "    indicadores=indicadores,\n",
-    "    data=202403,\n",
-    "    documento_cosif=4060 \n",
+    "    data=202403\n",
     ")\n",
     "print(\"Comparativo de indicadores para os principais bancos:\")\n",
     "display(tabela_comparativa)\n",
     "print(\"-\" * 80)\n",
     "\n",
     "\n",
-    "# --- 2.2: Gerando uma série temporal e plotando um gráfico ---\n",
-    "print(\"\\n--- 2.2: Série temporal de um indicador ---\")\n",
-    "serie_temporal = analisador.get_serie_temporal_indicador(\n",
-    "    identificador='NU FINANCEIRA',\n",
-    "    conta='TOTAL GERAL DO ATIVO',\n",
-    "    data_inicio=202401,\n",
-    "    data_fim=202412,\n",
-    "    fonte='COSIF'\n",
+    "# --- 2.2: Série Temporal e Visualização Gráfica ---\n",
+    "print(\"\\n--- 2.2: Série temporal de um indicador e sua visualização ---\")\n",
+    "# Usando os novos parâmetros para manter NaNs na série e visualizar as lacunas.\n",
+    "serie_lucro_bbtg = analisador.get_serie_temporal_indicador(\n",
+    "    identificador='BTG Pactual',\n",
+    "    conta='Lucro Líquido',\n",
+    "    data_inicio=202201,\n",
+    "    data_fim=202312,\n",
+    "    fonte='IFDATA',\n",
+    "    escopo_ifdata='prudencial', # Buscando o lucro do conglomerado\n",
+    "    drop_na=False # Mantém os meses sem dados como NaN para visualização\n",
     ")\n",
-    "print(\"Série Temporal para 'TOTAL GERAL DO ATIVO' do Nubank:\")\n",
-    "display(serie_temporal)\n",
+    "print(\"Série Temporal para 'Lucro Líquido' do BTG Pactual:\")\n",
+    "display(serie_lucro_bbtg)\n",
     "\n",
-    "# Plotando o resultado\n",
-    "if not serie_temporal.empty:\n",
+    "# Plotando o resultado para visualizar a sazonalidade (dados trimestrais)\n",
+    "if not serie_lucro_bbtg.empty:\n",
     "    fig, ax = plt.subplots(figsize=(12, 6))\n",
-    "    serie_temporal.plot(ax=ax, marker='o', linestyle='-', title=\"Evolução do Ativo Total - Nubank\")\n",
+    "    serie_lucro_bbtg.plot(x='DATA', y='Valor', ax=ax, marker='o', linestyle='-', \n",
+    "                          title=\"Evolução do Lucro Líquido - BTG Pactual (Prudencial)\")\n",
     "    ax.set_ylabel(\"Valor (em R$)\")\n",
     "    ax.set_xlabel(\"Data\")\n",
-    "    ax.yaxis.set_major_formatter(plt.FuncFormatter(lambda x, p: f'R$ {x/1e9:,.0f} bi')) # Formata em bilhões\n",
+    "    ax.yaxis.set_major_formatter(mticker.FuncFormatter(lambda x, p: f'R$ {x/1e9:,.1f} bi'))\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "print(\"-\" * 80)"
@@ -152,105 +158,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aade0796",
+   "id": "1d612057",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ==============================================================================\n",
-    "# SEÇÃO 3: TÉCNICAS AVANÇADAS E CASOS DE BORDA\n",
+    "# SEÇÃO 3: TÉCNICAS AVANÇADAS E CONTROLE DE DADOS\n",
     "# ==============================================================================\n",
-    "# Esta seção demonstra a flexibilidade e robustez da classe em cenários\n",
-    "# mais complexos e no tratamento de erros.\n",
+    "# Demonstração da flexibilidade da classe em cenários complexos.\n",
     "# ------------------------------------------------------------------------------\n",
     "\n",
-    "# --- 3.1: Consulta com lista mista de nomes e códigos de contas ---\n",
-    "print(\"\\n--- 3.1: Flexibilidade de consulta (nomes e códigos de contas) ---\")\n",
-    "contas_mistas = [\n",
-    "    'TOTAL GERAL DO ATIVO', # Busca por nome\n",
-    "    60000002                # Busca pelo código do 'PATRIMÔNIO LÍQUIDO'\n",
-    "]\n",
-    "dados_mistos = analisador.get_dados_cosif(\n",
-    "    identificador='BANCO BRADESCO S.A.',\n",
-    "    contas=contas_mistas,\n",
-    "    datas=202403,\n",
-    "    documentos=4060\n",
-    ")\n",
-    "print(\"Resultado da busca mista para 'BANCO BRADESCO S.A.':\")\n",
-    "display(dados_mistos[['Nome_Entidade', 'CONTA_COSIF', 'NOME_CONTA_COSIF', 'VALOR_CONTA_COSIF']])\n",
+    "# --- 3.1: Comparando Escopos no IF.DATA ---\n",
+    "print(\"\\n--- 3.1: Diferença entre escopos de dados no IF.DATA ---\")\n",
+    "conta_imob = 'Ativo Total'\n",
+    "data_imob = 202312\n",
+    "id_bradesco = 'BANCO BRADESCO S.A.'\n",
+    "\n",
+    "# Usando o novo parâmetro `escopo` para comparar os mesmos dados\n",
+    "dado_ifd_prudencial = analisador.get_dados_ifdata(identificador=id_bradesco, contas=[conta_imob], datas=data_imob, escopo='prudencial')\n",
+    "dado_ifd_individual = analisador.get_dados_ifdata(identificador=id_bradesco, contas=[conta_imob], datas=data_imob, escopo='individual')\n",
+    "\n",
+    "val_prud = dado_ifd_prudencial['VALOR_CONTA_IFD_VAL'].iloc[0] if not dado_ifd_prudencial.empty else \"N/A\"\n",
+    "val_ind = dado_ifd_individual['VALOR_CONTA_IFD_VAL'].iloc[0] if not dado_ifd_individual.empty else \"N/A\"\n",
+    "\n",
+    "print(f\"Ativo Total (Prudencial) do Bradesco: {val_prud}\")\n",
+    "print(f\"Ativo Total (Individual) do Bradesco: {val_ind}\")\n",
     "print(\"-\" * 80)\n",
     "\n",
     "\n",
-    "# --- 3.2: Comparando dados Individuais vs. Prudenciais ---\n",
-    "print(\"\\n--- 3.2: Diferença entre dados Individuais e Prudenciais ---\")\n",
-    "conta_unica = 'TOTAL GERAL DO ATIVO'\n",
-    "dado_prudencial = analisador.get_dados_cosif(identificador='BCO DO BRASIL S.A.', contas=[conta_unica], datas=202403, tipo='prudencial')\n",
-    "dado_individual = analisador.get_dados_cosif(identificador='BCO DO BRASIL S.A.', contas=[conta_unica], datas=202403, tipo='individual')\n",
+    "# --- 3.2: Controle Explícito de Dados Ausentes e Zeros ---\n",
+    "print(\"\\n--- 3.2: Flexibilidade no tratamento de nulos e zeros ---\")\n",
+    "banco_serie = 'Banco Inter'\n",
+    "conta_serie = 'Instrumentos Derivativos (f)' # Uma conta que pode ter valores zero\n",
+    "data_inicio, data_fim = 202301, 202306\n",
     "\n",
-    "print(f\"Ativo Total (Prudencial): {dado_prudencial['VALOR_CONTA_COSIF'].iloc[0]:,.2f}\")\n",
-    "print(f\"Ativo Total (Individual): {dado_individual['VALOR_CONTA_COSIF'].iloc[0]:,.2f}\")\n",
-    "print(\"-\" * 80)\n",
-    "\n",
-    "\n",
-    "# --- 3.3: Tratamento de Zeros e Nulos com `fillna` ---\n",
-    "print(\"\\n--- 3.3: Flexibilidade no tratamento de nulos (fillna) ---\")\n",
-    "banco_serie = 'BANCO INTER'\n",
-    "conta_serie = 'Letras de Crédito Imobiliário (c1)'\n",
-    "print(f\"Série para '{conta_serie}' do {banco_serie} (Padrão: com 0 e NaN)\")\n",
+    "print(\"(A) Comportamento Padrão (remove linhas com NaN):\")\n",
     "serie_padrao = analisador.get_serie_temporal_indicador(\n",
-    "    identificador=banco_serie, \n",
-    "    conta=conta_serie, \n",
-    "    data_inicio=202401, \n",
-    "    data_fim=202406, \n",
-    "    fonte='IFDATA'\n",
-    "    )\n",
+    "    identificador=banco_serie, conta=conta_serie, fonte='IFDATA', escopo_ifdata='individual',\n",
+    "    data_inicio=data_inicio, data_fim=data_fim, drop_na=True\n",
+    ")\n",
     "display(serie_padrao)\n",
     "\n",
-    "print(f\"\\nMesma série (preenchendo ausentes com 0)\")\n",
+    "print(\"\\n(B) Preenchendo dados ausentes (NaN) com 0:\")\n",
     "serie_fill_zero = analisador.get_serie_temporal_indicador(\n",
-    "    identificador=banco_serie, \n",
-    "    conta=conta_serie, \n",
-    "    data_inicio=202401, \n",
-    "    data_fim=202406, \n",
-    "    fonte='IFDATA', \n",
-    "    fillna=0)\n",
+    "    identificador=banco_serie, conta=conta_serie, fonte='IFDATA', escopo_ifdata='individual',\n",
+    "    data_inicio=data_inicio, data_fim=data_fim, fill_value=0, drop_na=False\n",
+    ")\n",
     "display(serie_fill_zero)\n",
     "\n",
-    "print(f\"\\nMesma série (tratando 0 como ausente)\")\n",
+    "print(\"\\n(C) Removendo Zeros da série (tratando-os como dados ausentes):\")\n",
     "serie_zeros_nan = analisador.get_serie_temporal_indicador(\n",
-    "    identificador=banco_serie, \n",
-    "    conta=conta_serie, \n",
-    "    data_inicio=202401, \n",
-    "    data_fim=202406, \n",
-    "    fonte='IFDATA', \n",
-    "    fillna=np.nan)\n",
+    "    identificador=banco_serie, conta=conta_serie, fonte='IFDATA', escopo_ifdata='individual',\n",
+    "    data_inicio=data_inicio, data_fim=data_fim, replace_zeros_with_nan=True, drop_na=True\n",
+    ")\n",
     "display(serie_zeros_nan)\n",
     "print(\"-\" * 80)\n",
     "\n",
     "\n",
-    "# --- 3.4: Tratamento de inputs inválidos ---\n",
-    "print(\"\\n--- 3.4: Robustez contra inputs inválidos ---\")\n",
-    "identificadores_invalidos = ['BANCO QUE NAO EXISTE', '99999999']\n",
-    "contas_invalidas = {'Indicador Inexistente': {'tipo': 'COSIF', 'conta': 'CONTA QUE NAO EXISTE'}}\n",
-    "\n",
+    "# --- 3.3: Robustez Contra Inputs Inválidos ---\n",
+    "print(\"\\n--- 3.3: Tratamento de inputs inválidos ---\")\n",
+    "# A classe deve retornar avisos e DataFrames vazios ou com N/A, sem quebrar.\n",
     "tabela_invalida = analisador.comparar_indicadores(\n",
-    "    identificadores=identificadores_invalidos,\n",
-    "    indicadores=contas_invalidas,\n",
+    "    identificadores=['BANCO QUE NAO EXISTE', '99999999'],\n",
+    "    indicadores={'Indicador Inválido': {'tipo': 'COSIF', 'conta': 'CONTA QUE NAO EXISTE'}},\n",
     "    data=202403\n",
     ")\n",
     "print(\"Resultado da tabela com inputs inválidos (esperado: tabela com erros e Nones):\")\n",
     "display(tabela_invalida)\n",
     "print(\"-\" * 80)\n",
     "\n",
-    "\n",
-    "# --- 3.5: Robustez das fontes (busca cruzada) ---\n",
-    "print(\"\\n--- 3.5: Robustez na separação de fontes ---\")\n",
-    "dados_cruzados = analisador.get_dados_ifdata(\n",
-    "    identificador='BCO DO BRASIL S.A.',\n",
-    "    contas=['ATIVO REALIZÁVEL'],\n",
-    "    datas=202403\n",
-    ")\n",
-    "print(f\"Buscando conta COSIF na fonte IFDATA. Linhas encontradas: {len(dados_cruzados)} (esperado: 0).\")\n",
-    "display(dados_cruzados)\n",
     "\n",
     "print(\"\\n\\n--- FIM DAS DEMONSTRAÇÕES ---\")"
    ]
