--- a/Analysis/DataAnalysis.ipynb
+++ b/Analysis/DataAnalysis.ipynb
@@ -2,27 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "03410a14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 1. INICIANDO SETUP ---\n",
-      "Iniciando o Analisador Bancário...\n",
-      "Analisador Bancário iniciado com sucesso!\n",
-      "  - 677,413 linhas em COSIF Individual\n",
-      "  - 567,956 linhas em COSIF Prudencial\n",
-      "  - 8,528,071 linhas em IFDATA Valores\n",
-      "  - 190,846 linhas em IFDATA Cadastro\n",
-      "  - Mapeamento interno criado para 6,365 nomes únicos.\n",
-      "--- SETUP CONCLUÍDO. ANALISADOR PRONTO. ---\n",
-      "------------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ==============================================================================\n",
     "# CÉLULA 1: SETUP E INICIALIZAÇÃO DA ANÁLISE\n",
@@ -65,17 +48,7 @@
    "execution_count": null,
    "id": "1aa25bc1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 2. CONFIGURANDO PARÂMETROS DA ANÁLISE ---\n",
-      "--- CONFIGURAÇÃO CARREGADA. ---\n",
-      "------------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ==============================================================================\n",
     "# CÉLULA 2: PAINEL DE CONTROLE DA ANÁLISE\n",
@@ -109,17 +82,21 @@
     "# --- Lista de Bancos ---\n",
     "try:\n",
     "    caminho_csv = Path('.') / 'Banks.csv'\n",
-    "    df_bancos_interesse = pd.read_csv(caminho_csv, dtype={'CNPJ_8': str}, sep=';')\n",
+    "    df_bancos_interesse = pd.read_csv(caminho_csv, dtype={'CNPJ_8': str}, sep=';', encoding='latin-1')\n",
     "    LISTA_BANCOS = [b for b in df_bancos_interesse['CNPJ_8'].tolist() if b]\n",
     "except FileNotFoundError:\n",
     "    print(f\"ERRO CRÍTICO: O arquivo '{caminho_csv.name}' não foi encontrado. A análise será interrompida.\")\n",
     "    LISTA_BANCOS = []\n",
     "\n",
+    "# --- CONTROLE GLOBAL DE TRATAMENTO DE DADOS ---\n",
+    "MODO_TRATAMENTO_DADOS = 'preencher_com_zero'\n",
+    "\n",
+    "\n",
     "# --- GRUPO 1: INDICADORES PARA SÉRIES TEMPORAIS (HISTÓRICO COMPLETO) ---\n",
     "INDICADORES_SERIES_TEMPORAIS = {\n",
-    "    'Ativo Total': {'fonte': 'IFDATA'},\n",
-    "    'RWA': {'fonte': 'IFDATA', 'conta': 'Patrimônio de Referência para Comparação com o RWA'},\n",
-    "    'Índice de Basileia': {'fonte': 'IFDATA'},\n",
+    "    'Ativo Total': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'},\n",
+    "    'RWA': {'fonte': 'IFDATA', 'conta': 'Patrimônio de Referência para Comparação com o RWA', 'escopo_ifdata': 'prudencial'},\n",
+    "    'Índice de Basileia': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'},\n",
     "    'Lucro Líquido': {'fonte': 'IFDATA'},\n",
     "    'Patrimônio Líquido': {'fonte': 'IFDATA'},\n",
     "    'Volume de Operações tipo G': {'fonte': 'IFDATA', 'conta': 'G'},\n",
@@ -136,10 +113,10 @@
     "        'Volume de Operações tipo D': {'fonte': 'IFDATA', 'conta': 'D'},\n",
     "        'Volume de Operações tipo E': {'fonte': 'IFDATA', 'conta': 'E'},\n",
     "        'Volume de Operações tipo F': {'fonte': 'IFDATA', 'conta': 'F'},\n",
-    "        'Depósitos a Prazo': {'fonte': 'IFDATA', 'conta': 'Depósitos a Prazo (a4)'},\n",
-    "        'Letra de Crédito Imobiliário': {'fonte': 'IFDATA', 'conta': 'Letras de Crédito Imobiliário (c1)'},\n",
-    "        'Letra de Crédito Agronegócio': {'fonte': 'IFDATA', 'conta': 'Letras de Crédito do Agronegócio (c2)'},\n",
-    "        'Letras Financeiras': {'fonte': 'IFDATA', 'conta': 'Letras Financeiras (c3)'}\n",
+    "        'Depósitos a Prazo': {'fonte': 'IFDATA', 'conta': 'Depósitos a Prazo (a4)', 'escopo_ifdata': 'prudencial'},\n",
+    "        'Letra de Crédito Imobiliário': {'fonte': 'IFDATA', 'conta': 'Letras de Crédito Imobiliário (c1)', 'escopo_ifdata': 'prudencial'},\n",
+    "        'Letra de Crédito Agronegócio': {'fonte': 'IFDATA', 'conta': 'Letras de Crédito do Agronegócio (c2)', 'escopo_ifdata': 'prudencial'},\n",
+    "        'Letras Financeiras': {'fonte': 'IFDATA', 'conta': 'Letras Financeiras (c3)', 'escopo_ifdata': 'prudencial'}\n",
     "        }\n",
     "\n",
     "# --- ATRIBUTOS CADASTRAIS (DADOS ESTÁTICOS) ---\n",
@@ -151,38 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "33306edc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 3.1. Otimização: Pré-filtrando DataFrames para máxima performance... ---\n",
-      " -> DataFrame IF.DATA pré-filtrado de 8,528,071 para 604,762 linhas.\n",
-      "\n",
-      "--- 3.2. Coletando todos os componentes necessários... ---\n",
-      "\n",
-      " -> Coleta concluída. DataFrame original restaurado.\n",
-      "\n",
-      "--- 3.3. Consolidando e exportando dados para o Power BI... ---\n",
-      "\n",
-      "============================================================\n",
-      ">>> SUCESSO! <<<\n",
-      "Relatório de COMPONENTES para o Power BI foi gerado com 4,494 linhas.\n",
-      "Arquivo salvo em: 'C:\\Users\\Enzo\\Documents\\Programming\\bacen-data-analysis\\Analysis\\Results\\relatorio_powerbi_202412.xlsx'\n",
-      "============================================================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ==============================================================================\n",
-    "# CÉLULA 3: COLETA OTIMIZADA E EXPORTAÇÃO DIRETA (VERSÃO FINAL)\n",
+    "# CÉLULA 3: COLETA OTIMIZADA E EXPORTAÇÃO DIRETA\n",
     "# ==============================================================================\n",
     "# Descrição: Este pipeline usa a técnica de pré-filtragem para máxima performance\n",
-    "# e exporta os componentes brutos diretamente para o Power BI, onde os\n",
-    "# cálculos de NPL e ROE serão feitos como Medidas DAX.\n",
+    "# e exporta os componentes brutos diretamente para o Power BI.\n",
     "# ------------------------------------------------------------------------------\n",
     "if LISTA_BANCOS:\n",
     "    # --- ETAPA 1: Pré-filtragem para Performance (\"Bulk Filtering\") ---\n",
@@ -191,21 +146,28 @@
     "    todos_indicadores = {**INDICADORES_SERIES_TEMPORAIS, **INDICADORES_SNAPSHOT}\n",
     "    contas_para_buscar = [info.get('conta', nome) for nome, info in todos_indicadores.items()]\n",
     "\n",
-    "    # Filtra os DataFrames base UMA ÚNICA VEZ\n",
-    "    # Inclui busca por nome e por código para máxima compatibilidade\n",
+    "    # Filtra o DataFrame IF.DATA uma única vez\n",
     "    df_ifdata_trabalho = analisador.df_ifd_val[\n",
     "        (analisador.df_ifd_val['NOME_CONTA_IFD_VAL'].isin(contas_para_buscar)) | \n",
     "        (analisador.df_ifd_val['CONTA_IFD_VAL'].astype(str).isin(contas_para_buscar))\n",
     "    ].copy()\n",
     "\n",
-    "    # Guarda os DataFrames originais para restaurar depois\n",
     "    original_ifd_val = analisador.df_ifd_val\n",
-    "    \n",
-    "    # \"Injeta\" o DataFrame otimizado no analisador para esta sessão\n",
     "    analisador.df_ifd_val = df_ifdata_trabalho\n",
     "    print(f\" -> DataFrame IF.DATA pré-filtrado de {len(original_ifd_val):,} para {len(df_ifdata_trabalho):,} linhas.\")\n",
     "    \n",
-    "    # --- ETAPA 2: Coleta de Dados (agora usando os DFs otimizados) ---\n",
+    "    # --- Traduz o modo de tratamento global para parâmetros de função ---\n",
+    "    parametros_tratamento = {}\n",
+    "    if MODO_TRATAMENTO_DADOS == 'remover_nulos':\n",
+    "        parametros_tratamento = {'drop_na': True}\n",
+    "    elif MODO_TRATAMENTO_DADOS == 'preencher_com_zero':\n",
+    "        parametros_tratamento = {'fill_value': 0, 'drop_na': False}\n",
+    "    elif MODO_TRATAMENTO_DADOS == 'manter_nulos':\n",
+    "        parametros_tratamento = {'drop_na': False}\n",
+    "    elif MODO_TRATAMENTO_DADOS == 'remover_zeros_e_nulos':\n",
+    "        parametros_tratamento = {'replace_zeros_with_nan': True, 'drop_na': True}\n",
+    "\n",
+    "    # --- ETAPA 2: Coleta de Dados com Lógica Dinâmica ---\n",
     "    dfs_coletados = []\n",
     "    print(\"\\n--- 3.2. Coletando todos os componentes necessários... ---\")\n",
     "    \n",
@@ -217,17 +179,30 @@
     "            else:\n",
     "                datas_para_buscar = [DATA_SNAPSHOT]\n",
     "            \n",
-    "            conta_busca = info.get('conta', nome_indicador)\n",
+    "            # Constrói dinamicamente os parâmetros para a chamada da função\n",
+    "            kwargs_chamada = {\n",
+    "                'identificador': banco,\n",
+    "                'conta': info.get('conta', nome_indicador),\n",
+    "                'fonte': info['fonte'],\n",
+    "                'datas': datas_para_buscar\n",
+    "            }\n",
     "            \n",
-    "            df_serie = analisador.get_serie_temporal_indicador(\n",
-    "                identificador=banco, conta=conta_busca,\n",
-    "                datas=datas_para_buscar, fonte=info['fonte'], documento_cosif=info.get('documento'),\n",
-    "                fillna=0\n",
-    "            )\n",
+    "            # Adiciona parâmetros opcionais apenas se definidos no dicionário do indicador\n",
+    "            if 'documento_cosif' in info:\n",
+    "                kwargs_chamada['documento_cosif'] = info['documento_cosif']\n",
+    "            if 'escopo_ifdata' in info:\n",
+    "                kwargs_chamada['escopo_ifdata'] = info['escopo_ifdata']\n",
+    "                \n",
+    "            # Adiciona os parâmetros globais de tratamento de dados\n",
+    "            kwargs_chamada.update(parametros_tratamento)\n",
+    "            \n",
+    "            # Chama a função usando o desempacotamento de dicionário\n",
+    "            df_serie = analisador.get_serie_temporal_indicador(**kwargs_chamada)\n",
+    "            \n",
     "            if not df_serie.empty:\n",
     "                dfs_coletados.append(df_serie)\n",
     "\n",
-    "    # Restaura o DataFrame original no analisador para não afetar outras células\n",
+    "    # Restaura o DataFrame original no analisador\n",
     "    analisador.df_ifd_val = original_ifd_val\n",
     "    print(\"\\n -> Coleta concluída. DataFrame original restaurado.\")\n",
     "\n",
@@ -238,15 +213,12 @@
     "        print(\"\\n--- 3.3. Consolidando e exportando dados para o Power BI... ---\")\n",
     "        df_long_base = pd.concat(dfs_coletados, ignore_index=True)\n",
     "        \n",
-    "        # Traduz os nomes técnicos para os nomes amigáveis\n",
     "        mapa_nomes = {info.get('conta', nome): nome for nome, info in todos_indicadores.items()}\n",
     "        df_long_base['Indicador'] = df_long_base['Conta'].replace(mapa_nomes)\n",
     "        \n",
-    "        # Junção dos atributos cadastrais\n",
     "        df_atributos = analisador.get_atributos_cadastro(identificador=LISTA_BANCOS, atributos=ATRIBUTOS_CADASTRAIS)\n",
     "        df_para_bi = pd.merge(df_long_base, df_atributos, on=['CNPJ_8', 'Nome_Entidade'], how='left')\n",
     "\n",
-    "        # Seleciona e reordena as colunas finais\n",
     "        colunas_finais = ['DATA', 'Nome_Entidade', 'CNPJ_8', 'Indicador', 'Valor'] + [col for col in ATRIBUTOS_CADASTRAIS if col in df_para_bi.columns]\n",
     "        df_para_bi = df_para_bi[colunas_finais]\n",
     "\n",
